style.css
body {
    background-color: gray;
    margin: 0;

}
a:link {color: 595959;
text-decoration: none;}
@font-face {font-family: font1;
    src: url(font1.otf);}
@font-face{ font-family: font2;
    src: url(font2.otf);
}    
.tagline
{
color: whitesmoke;
font-family: font2;
text-align: center;
padding-bottom: 20px;
font-size: 20;

}
.sshow
{
max-width: 100%;
position: relative;
margin: auto;
z-index: -1;

}
.s{position: relative;
}
 /* .btn
{
position: absolute;
top: 50%;
left: 12%;
background-color: rgba(0, 0, 0, 0);
color: white;
padding: 6px 24px;
border-color: #ffffff;
border-width: 1px;
border-radius: 3px;
font-family: Helvetica, sans-serif;
font-size: 20px;
cursor: pointer;
z-index: 1;

} */
h1 {color: white; 
    text-align: center;
    font-size: 50;
    letter-spacing: 3px;
    padding-top:  20px;
    padding-bottom: 0%
    padding-left: 20px;
font-family: font1;}
.navbar
{background-color: #404040;
line-height: 0.4;
margin-bottom: 0;
padding-top: 2;
width: 100%;
position: fixed;
box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.25);}
.nav1{height: 50px;
background-color: ffffff;
position: sticky;
top: 140;
width: 100%;
box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.25);
}

li {display: inline-block;
    padding: 14px 40px;
    overflow: hidden;
    vertical-align: middle;
    font-family: futura;
    font-size: 25;
    letter-spacing: 2px;

font-family: font2;
font-weight: 100;
}
ul {list-style-type: none;
text-align: center;
margin: 0%;
  vertical-align: middle;
}
.footer 
{
background-color: 252525;
position: fixed;
bottom: 0px;
width: 100%;

}
.textc
{width: 100%;
    background-color: whitesmoke;
    position: -webkit-sticky;
    position: sticky;
font-family:  Helvetica, sans-serif;
font-size: 20px;
height: 50%;
   top: 50%;
    z-index: 2;
    box-shadow: 0 -4px 8px 0px rgba(0, 0, 0, 0.25);
}
.text1
{ 
    position: relative;
margin-left: 10%;
margin-right: 10%;
width: 50%;
top: 40%;
color: #404040;
text-align: center;
vertical-align: center;
}

